@@ -1,0 +1,7 @@
+%
+% $Id: pdffigures.tex,v 1.1 2010/03/08 23:41:15 sfeam Exp $
+%
+% This file is modified dynamically by "make" depending on whether or not
+% figures are to be included in the documentation
+% \usepackage{graphicx}
+% \usepackage{picins}
