@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.25 2009/10/18 21:27:39 sfeam Exp $
+% $Id: titlepag.tex,v 1.26 2010/03/08 23:41:15 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -37,8 +37,7 @@
   \makeindex
 
   % These are only needed if you want to embed figures
-  \usepackage{graphicx}
-  \usepackage{picins}
+  \include{pdffigures}
 
 \fi
 
